# deps_on_demand

./: README.md  flake.nix  pyproject.toml  requirements.txt
main/: setup.py
main/deps_on_demand/: __init__.py  cli.py  helpers.py  shim_tooling.py
